--- a/app/src/main/res/layout/choose_food_one_row.xml
+++ b/app/src/main/res/layout/choose_food_one_row.xml
@@ -3,10 +3,9 @@
     android:clickable="true" android:orientation="horizontal"
     android:layout_width="match_parent" android:layout_height="wrap_content">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
         android:id="@+id/choose_food_picture" />
 
     <TextView
