--- a/app/src/main/res/layout/choose_food_one_row.xml
+++ b/app/src/main/res/layout/choose_food_one_row.xml
@@ -6,6 +6,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/pizza"
         android:id="@+id/choose_food_picture" />
 
     <TextView
