--- a/app/src/main/res/layout/activity_show_food.xml
+++ b/app/src/main/res/layout/activity_show_food.xml
@@ -6,7 +6,16 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ChooseFoodActivity">
 
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/iv_loader"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
     <ListView android:id="@+id/lv_FoodShowList"
+        android:layout_toEndOf="@+id/iv_loader"
+        android:layout_toRightOf="@+id/iv_loader"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
 
