--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -8,7 +8,8 @@
         android:id="@+id/activityAddFood_spn_pictures"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:spinnerMode="dialog" />
 
     <Spinner
         android:layout_width="wrap_content"
@@ -16,7 +17,7 @@
         android:id="@+id/activityAddFood_spn_building"
         android:layout_below="@+id/activityAddFood_spn_pictures"
         android:layout_alignParentLeft="true"
-    />
+        android:spinnerMode="dialog" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -36,24 +37,30 @@
         android:layout_alignParentLeft="true"
     />
 
-    <EditText
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText3"
-        android:hint="@string/ActivityAddFood_num_people_hint"
-        android:layout_below="@+id/activityAddFood_edt_inside_building"
+        android:id="@+id/activityAddFood_bg_image"
+        android:layout_below="@+id/description"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="107dp" />
+        android:src="@drawable/pooh_giving_flower" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
+        android:text="Add food!"
+        android:id="@+id/activityAddFood_send_button"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/editText"
-        android:layout_toEndOf="@+id/editText" />
+        android:layout_alignParentLeft="true"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="cancel"
+        android:id="@+id/activityAddFood_cancel_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        />
+
 </RelativeLayout>
