--- a/app/src/main/res/layout/simple_adapter_for_text.xml
+++ b/app/src/main/res/layout/simple_adapter_for_text.xml
@@ -7,4 +7,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/adapter_for_text_textView" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/adapter_for_text_textView2" />
 </LinearLayout>
