--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -30,7 +30,7 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/description"
+        android:id="@+id/activityAddFood_edt_description"
         android:hint="@string/ActivityAddFood_description_hint"
         android:layout_below="@+id/activityAddFood_edt_inside_building"
         android:layout_alignParentLeft="true"
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/activityAddFood_bg_image"
-        android:layout_below="@+id/description"
+        android:layout_below="@+id/activityAddFood_edt_description"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:src="@drawable/pooh_giving_flower" />
@@ -61,5 +61,28 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="2"
+        android:text="3"
+        android:textDirection="ltr"
+        android:textAlignment="textEnd"
+        android:id="@+id/activityAddFood_num_people"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="For how many people?"
+        android:id="@+id/activityAddFood_num_people_hint_textView"
+        android:layout_alignBottom="@+id/activityAddFood_num_people"
+        android:layout_toLeftOf="@+id/activityAddFood_num_people"
+        android:layout_toStartOf="@+id/activityAddFood_num_people"/>
 
 </RelativeLayout>
