--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -53,14 +53,14 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="cancel"
-        android:id="@+id/activityAddFood_cancel_button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        />
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="cancel"-->
+        <!--android:id="@+id/activityAddFood_cancel_button"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--/>-->
 
     <EditText
         android:layout_width="wrap_content"
