--- a/app/src/main/res/layout/choose_food_one_row.xml
+++ b/app/src/main/res/layout/choose_food_one_row.xml
@@ -3,8 +3,10 @@
     android:clickable="true"
                 android:longClickable="true"
                 android:orientation="horizontal"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:layout_margin="80px"
+                android:layout_width="match_parent" android:layout_height="wrap_content"
+                android:layout_margin="80px"
+                android:background="#ffe2b8ff"
+
     >
 
     <ImageView
