--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,34 +8,34 @@
 
 
     <TextView
+        android:id="@+id/activitySignUp_enterYourName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/SignUpActivity_EnterYourName"
-        android:id="@+id/activitySignUp_enterYourName"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="86dp" />
+        android:layout_centerInParent="true"
+        android:layout_marginTop="86dp"
+        android:text="@string/SignUpActivity_EnterYourName"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
+        android:id="@+id/activitySignUp_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:inputType="text"
-        android:hint="@string/SignUpActivity_NameHint"
-        android:ems="10"
-        android:id="@+id/activitySignUp_name"
         android:layout_below="@+id/activitySignUp_enterYourName"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
+        android:ems="10"
+        android:hint="@string/SignUpActivity_NameHint"
+        android:inputType="text" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/SignUpActivity_Done"
-        android:id="@+id/button"
         android:layout_below="@+id/activitySignUp_name"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/SignUpActivity_Done" />
 </RelativeLayout>
 
 
