--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -3,13 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ff282828"
-    android:orientation="vertical"
-    tools:context="il.ac.huji.freefood.activities_one_class.MainActivity"
-    >
+    android:orientation="horizontal"
+    tools:context="il.ac.huji.freefood.activities_one_class.MainActivity">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="0.5"
         android:background="#ff282828">
 
@@ -20,13 +19,12 @@
             android:background="#ff282828"
             android:clickable="true"
             android:scaleType="fitXY"
-            android:src="@drawable/hungry"
-        />
+            android:src="@drawable/hungry" />
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="0.5">
 
         <ImageButton
