--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -1,11 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ff282828"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="il.ac.huji.freefood.LoginActivity">
+    tools:context="il.ac.huji.freefood.activities_one_class.LoginActivity">
 
     <TextView
         android:id="@+id/login2_textView"
@@ -22,9 +23,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/login2_textView"
         android:layout_centerHorizontal="true"
+        android:background="#ff282828"
         android:src="@drawable/pooh_in_snow" />
 
     <TextView
+        android:id="@+id/tv_login_undertext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
