--- a/app/src/main/res/layout/choose_food_one_row.xml
+++ b/app/src/main/res/layout/choose_food_one_row.xml
@@ -30,16 +30,19 @@
         android:id="@+id/choose_food_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="false"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:text="New Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
-        android:id="@+id/choose_food_building"
+        android:id="@+id/choose_food_other"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/choose_food_picture"
         android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:text="New Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
