--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-    </style>
+    <style name="AppTheme" parent="Base.V11.Theme.AppCompat" />
 
+    <style name="SpaceBetweenElements" parent="Base.V11.Theme.AppCompat.Light">
+        <item name="android:layout_marginTop">100dp</item>
+    </style>
 </resources>
