--- a/app/src/main/res/layout/choose_food_one_row.xml
+++ b/app/src/main/res/layout/choose_food_one_row.xml
@@ -16,11 +16,12 @@
         android:src="@drawable/pooh_icon" />
 
     <TextView
+        android:padding="0dp"
         android:id="@+id/tv_choose_food_dismiss"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:alpha="0"
-        android:background="@drawable/food_list_item_back"
+        android:background="#ff282828"
         android:text="Dismiss?"
         android:textColor="#ffffffff"
         android:textSize="72dp" />
