--- a/app/src/main/res/layout/activity_food_details_no_google_api.xml
+++ b/app/src/main/res/layout/activity_food_details_no_google_api.xml
@@ -1,24 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <fragment
-        android:id="@+id/map_fragment_details"
-        class="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.5"
-        />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.4">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_weight="0.8"
         >
 
 
@@ -43,7 +30,10 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:contentDescription="background image"
-            />
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:scaleType="fitCenter"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -68,53 +58,52 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
     </RelativeLayout>
-    </ScrollView>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
+<LinearLayout
+android:layout_width="fill_parent"
+android:layout_height="0dp"
 
-        android:orientation="horizontal"
-        android:layout_weight="0.1">
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.25">
+android:orientation="horizontal"
+android:layout_weight="0.1">
+<RelativeLayout
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
+    android:layout_weight="0.25">
 
-            <ImageButton
-                android:id="@+id/ib_details_back"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clickable="true"
-                android:contentDescription="@string/btn_back"
-                android:scaleType="centerInside"
-                android:src="@drawable/back_arrow_light" />
-        </RelativeLayout>
+    <ImageButton
+        android:id="@+id/ib_details_back"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:contentDescription="@string/btn_back"
+        android:scaleType="centerInside"
+        android:src="@drawable/back_arrow_light" />
+</RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.75"
-            >
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="open in maps!"
-                android:id="@+id/btn_details_open_external"/>
+<RelativeLayout
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
+    android:layout_weight="0.75"
+    >
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="open in maps!"
+        android:id="@+id/btn_details_open_external"/>
 
-        </RelativeLayout>
+</RelativeLayout>
 
-        <!--<RelativeLayout-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="0.25">-->
+<!--<RelativeLayout-->
+<!--android:layout_width="0dp"-->
+<!--android:layout_height="match_parent"-->
+<!--android:layout_weight="0.25">-->
 
-            <!--<ImageButton-->
-                <!--android:id="@+id/ib_details_refresh"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:contentDescription="@string/content_des_refresh_list_button"-->
-                <!--android:scaleType="centerInside"-->
-                <!--android:src="@drawable/refresh_icon" />-->
-        <!--</RelativeLayout>-->
-    </LinearLayout>
+<!--<ImageButton-->
+<!--android:id="@+id/ib_details_refresh"-->
+<!--android:layout_width="match_parent"-->
+<!--android:layout_height="match_parent"-->
+<!--android:contentDescription="@string/content_des_refresh_list_button"-->
+<!--android:scaleType="centerInside"-->
+<!--android:src="@drawable/refresh_icon" />-->
+<!--</RelativeLayout>-->
+</LinearLayout>
 </LinearLayout>
