--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,34 +8,33 @@
 
 
     <TextView
+        android:paddingTop="100dp"
         android:id="@+id/activitySignUp_enterYourName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="86dp"
         android:text="@string/SignUpActivity_EnterYourName"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/edt_sign_input"
+        android:layout_alignEnd="@+id/edt_sign_input" />
 
     <EditText
-        android:id="@+id/activitySignUp_name"
+        android:id="@+id/edt_sign_input"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/activitySignUp_enterYourName"
-        android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
         android:ems="10"
         android:hint="@string/SignUpActivity_NameHint"
-        android:inputType="text" />
+        android:inputType="text"
+        android:layout_below="@+id/activitySignUp_enterYourName"
+        android:layout_centerHorizontal="true" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_sign_done"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/activitySignUp_name"
-        android:layout_centerHorizontal="true"
-        android:text="@string/SignUpActivity_Done" />
+        android:text="@string/SignUpActivity_Done"
+        android:layout_below="@+id/edt_sign_input"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
 
 
