--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:background="#ff282828"
     android:orientation="vertical"
     tools:context="il.ac.huji.freefood.activities_one_class.MainActivity"
+    android:padding="16dp"
     >
 
     <RelativeLayout
@@ -24,6 +25,9 @@
         />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="16dp"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
