--- a/app/src/main/res/layout/activity_no_food_found.xml
+++ b/app/src/main/res/layout/activity_no_food_found.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitCenter"
-            android:src="@drawable/no_food_found_white"
+            android:src="@drawable/no_food_found"
             android:background="#ff0f0f0f"
             />
     </RelativeLayout>
