--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,5 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" android:gravity="center_horizontal"
     android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -7,8 +8,12 @@
     android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.4"
+        >
     <TextView
-        android:paddingTop="100dp"
         android:id="@+id/activitySignUp_enterYourName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,7 +40,20 @@
         android:text="@string/SignUpActivity_Done"
         android:layout_below="@+id/edt_sign_input"
         android:layout_centerHorizontal="true" />
-</RelativeLayout>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.6"
+        >
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/raindeer"
+            android:scaleType="centerInside"/>
+
+    </RelativeLayout>
+</LinearLayout>
 
 
 
