--- a/app/src/main/res/layout/choose_food_one_row.xml
+++ b/app/src/main/res/layout/choose_food_one_row.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:src="@drawable/pooh_icon" />
+        android:src="@drawable/default_thumbnail" />
 
     <TextView
         android:padding="0dp"
